--- a/Clubhouse/Views/Home/Login.cshtml
+++ b/Clubhouse/Views/Home/Login.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
 }
 
 <form method="post">
@@ -7,10 +6,11 @@
     <input type="text" name="username" class="form-control" placeholder="username" />
     <label for="password" class="sr-only">Password</label>
     <input type="password" name="password" class="form-control" />
-    <button class="btn-primary btn-lg" type="submit">Login</button>
+    <button class="btn btn-primary" type="submit">Login</button>
 </form>
-
-
-<form method="post" asp-controller="Home" asp-action="Logout">
-    <button class="btn-primary btn-lg" type="submit">Logout</button>
-</form>
+<div>
+    <a asp-controller="Users" asp-action="Create">Create a new account</a>
+</div>
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
