Show users post to visitors

--- a/Clubhouse/Views/Home/Index.cshtml
+++ b/Clubhouse/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
-﻿@{
+﻿@model IEnumerable<Clubhouse.Models.Post>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Post</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Body)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
