--- a/Clubhouse/Views/Members/Index.cshtml
+++ b/Clubhouse/Views/Members/Index.cshtml
@@ -11,7 +11,7 @@
 </div>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Post</a>
 </p>
 <table class="table">
     <thead>
@@ -21,9 +21,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Body)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RowVersion)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.User)
@@ -41,9 +38,6 @@
                 @Html.DisplayFor(modelItem => item.Body)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RowVersion)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.User.UserName)
             </td>
             <td>
@@ -55,3 +49,7 @@
 }
     </tbody>
 </table>
+
+<form method="post" asp-controller="Home" asp-action="Logout">
+    <button class="btn btn-primary" type="submit">Logout</button>
+</form>
