--- a/Clubhouse/Views/Home/Index.cshtml
+++ b/Clubhouse/Views/Home/Index.cshtml
@@ -25,6 +25,9 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Body)
                 </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedDate)
+                </td>
             </tr>
         }
     </tbody>
