--- a/Clubhouse/Views/Shared/_Layout.cshtml
+++ b/Clubhouse/Views/Shared/_Layout.cshtml
@@ -32,9 +32,12 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Create">Create Account</a>
-                            </li>
+                            </li>                           
                         }
 
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index" asp-route-myposts="true">My Posts</a>
+                            </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">Member Area</a>
                         </li>
